# space-memories

./: .gitignore  .gitmodules  CMakeLists.txt  systems-execute-priorities.txt
maps/: room.json  test.json
prototypes/: floors.json  init.json  other.json  test.json  turf.json  walls.json
resources/: floors.dmi  other.dmi  space.dmi  test.json  walls.dmi
src/: init.hpp  init_services.cpp  init_systems.cpp  main.cpp
src/components/: CMakeLists.txt
src/components/components/: Camera.hpp  ExitAfterNSec.hpp  Imgui.hpp  Input.hpp  Map.hpp  Movement.hpp  ObjectTypes.hpp  Other.hpp  Position.hpp  RenderMode.hpp  RenderWindow.hpp  Sprite.hpp
src/core/: CMakeLists.txt  ILogger.hpp  IService.hpp  ISystem.cpp  ISystem.hpp  RateLimiter.cpp  RateLimiter.hpp  ServiceLocator.cpp  ServiceLocator.hpp  TextureID.hpp
src/core/component/: Position.hpp  Renderable.hpp  Texture.hpp  Window.hpp
src/core/include/core/: Core.hpp  Logger.hpp  LoggerFactory.hpp  Process.hpp  Service.hpp  ServiceLocator.hpp  System.hpp  SystemManager.hpp  TypeRegistry.hpp  define_helpers.hpp  define_service.hpp  define_system.hpp  type_index.hpp
src/core/service/: LoggerFactory.cpp  LoggerFactory.hpp  PerformanceController.hpp  Settings.hpp  Shutdown.cpp  Shutdown.hpp  TextureLoader.cpp  TextureLoader.hpp  Window.cpp  Window.hpp  service_helpers.hpp
src/core/src/: Core.cpp  ProcessImpl.cpp  ProcessImpl.hpp  RateLimiter.cpp  RateLimiter.hpp  Service.cpp  ServiceLocator.cpp  ServiceLocatorImpl.cpp  ServiceLocatorImpl.hpp  System.cpp  SystemManagerImpl.cpp  SystemManagerImpl.hpp  SystemRegistry.cpp  SystemRegistry.hpp  TypeRegistry.cpp  define_service.cpp  define_system.cpp
src/core/system/: RenderSystem.cpp  RenderSystem.hpp  Window.hpp  WindowClear.cpp  WindowClear.hpp  WindowUpdate.cpp  WindowUpdate.hpp
src/helpers/: CMakeLists.txt
src/helpers/include/helpers/: KeyState.hpp
src/main/: CMakeLists.txt  LoggerFactory.hpp  main.cpp
src/prototype_component_builders/: CMakeLists.txt  Camera.cpp  Imgui.cpp  Input.cpp  Map.cpp  Movement.cpp  ObjectTypes.cpp  Other.cpp  Position.cpp  RenderMode.cpp  RenderWindow.cpp  Sprite.cpp
src/services/: CMakeLists.txt
src/services/include/services/: Camera.hpp  Input.hpp  PrototypeBuilder.hpp  SFMLRenderWindow.hpp  SpriteManager.hpp  Time.hpp  World.hpp
src/services/include/services/Input/: Key.hpp  KeyboardState.hpp
src/services/include/services/PrototypeBuilder/: EmplacerBuilder.hpp  define_component_builder.hpp
src/services/src/: Camera.cpp  Input.cpp  SFMLRenderWindow.cpp  SpriteManager.cpp  TimeImpl.cpp  World.cpp
src/services/src/PrototypeBuilder/: ComponentBuilderRegistry.hpp  ComponentEmplacer.hpp  EmplacerBuilder.hpp  PrototypeBuilder.cpp  define_component_builder.cpp
src/services/src/SpriteManager/: DmiMetadata.cpp  DmiMetadata.hpp  SpriteManager.cpp  SpriteSheet.hpp  fix_me_png_icon.h
src/ss13/system/: Init.cpp  Init.hpp  TickUsageCounter.cpp  TickUsageCounter.hpp
src/systems/: AddSpriteFrameeAnimationIfNeeded.cpp  CMakeLists.txt  CameraAutoPrefferedSize.cpp  CameraFixedUnitSize.cpp  CameraPillarbox.cpp  CameraRenderRegionUpdate.cpp  CloseWindowEventHandler.cpp  CopyWindowEvents.cpp  DebugRenderRegionFrame.cpp  DefaultRenderSystem.cpp  DenseIntersectionControll.cpp  ExitAfter10sec.cpp  ExitAfterNsec.cpp  ExitIfWindowClosed.cpp  HelloWorld.cpp  ImguiDebugMenu.cpp  ImguiRender.cpp  ImguiUpdate.cpp  Init.cpp  InputClear.cpp  InputServiceClear.cpp  InputServiceUpdate.cpp  InputUpdate.cpp  ListenWindowEvents.cpp  ListenWindowEventsClear.cpp  MapInit.cpp  MapLoader.cpp  PixelPerfectCameraSize.cpp  QuadRenderSystem.cpp  RenderBegin.cpp  RenderEnd.cpp  SFMLRenderWindow.cpp  SpaceIconInitialise.cpp  SpriteFrameAnimation.cpp  SpriteManagerUpdate.cpp  TimeUpdate.cpp  WASDRawInputMovable.cpp  WindowEventsHandler.cpp  WindowEventsHandlerClear.cpp  WorldUpdate.cpp  (+1 more)
src/systems/SpriteLoader/: SpriteLoader.cpp
tests/: Test.test.cpp
tests/core/: LoggerFactory.test.cpp  ServiceLocator.test.cpp
